--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,10 @@
     <title>{% block title %}نظام إدارة العملاء{% endblock %}</title>
 
     <!-- Bootstrap RTL CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.rtl.min.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
     <!-- Animate.css for SweetAlert animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">    <!-- Custom CSS -->
@@ -538,11 +538,11 @@
     }
     </style>
 
-    <!-- Bootstrap JS Bundle with Popper -->
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-
     <!-- jQuery -->
-    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- Bootstrap Bundle JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>    <!-- Custom JS -->
