--- a/static/css/custom-theme-enhancements.css
+++ b/static/css/custom-theme-enhancements.css
@@ -32,7 +32,7 @@
 
 [data-theme="custom-theme"] .navbar .fa-user,
 [data-theme="custom-theme"] .navbar .fa-user-circle {
-    color: #3700ff !important; /* ذهبي مشرق */
+    color: #efec33 !important; /* ذهبي مشرق */
 }
 
 [data-theme="custom-theme"] .navbar .fa-bell,
