--- a/customers/templates/customers/customer_list.html
+++ b/customers/templates/customers/customer_list.html
@@ -29,10 +29,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-3 mb-2">
+                <div class="row">                    <div class="col-md-3 mb-2">
                         <label for="{{ form.category.id_for_label }}" class="form-label">التصنيف</label>
                         {{ form.category }}
+                    </div>
+                    <div class="col-md-3 mb-2">
+                        <label for="{{ form.branch.id_for_label }}" class="form-label">الفرع</label>
+                        {{ form.branch }}
                     </div>
                     <div class="col-md-3 mb-2">
                         <label for="{{ form.customer_type.id_for_label }}" class="form-label">نوع العميل</label>
